# DasherControl

./: .dockerignore  .env  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  Rocket.toml  diesel.toml  docker-compose.yml  js-dev-setup.sh  package-lock.json  package.json  rust-setup-dev.sh  start-server.sh  start-servers.sh  webpack.config.js
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: CI.yml  build.yml  main.yml  tests.yml
backend/: Dockerfile  db.rs  main.rs  models.rs  schema.rs
backend/tests/: main.rs
certs/: cert.crt  cert.key  create_aes128key.sh  create_jwt_key.sh  create_tls.sh  secret.key
frontend/: App.vue  main.js  package-lock.json  package.json  utils.js  webpack.config.js
frontend/components/: ButtonGridAction.vue  GridEditMenu.vue  GridItem.vue  GridItemApplet.vue  GridLayout.vue  GridLayoutMain.vue  GridModulesItem.vue  Navbar.vue  WorkspaceSelector.vue
frontend/components/applets/: Applet.vue  Editor.vue
frontend/components/applets/Canvas/: Canvas.vue
frontend/components/applets/Container/: Container.vue
frontend/components/applets/CreateNew/: CreateNew.vue  CreateNewSetting.vue
frontend/components/applets/DockerManager/: DockerManager.vue  DockerManagerSetting.vue
frontend/components/applets/Editor/: Editor.vue  EditorSetting.vue
frontend/components/applets/IFrame/: BorderlessIFrame.vue  IFrame.vue  IFrameSetting.vue
frontend/components/applets/Shortcut/: Shortcut.vue  ShortcutSetting.vue
frontend/pages/: Login.vue  Main.vue  Settings.vue  SignUp.vue
frontend/public/: index.html  manifest.json
frontend/templates/: base.html.tera  index.html.tera
migrations/2021-03-16-221948_create_tenant_table/: down.sql  up.sql
migrations/2021-03-16-221948_create_tenants/: up.sql
migrations/2021-03-24-014710_create_user/: down.sql  up.sql
migrations/2021-03-24-032158_auth_infos/: down.sql  up.sql
migrations/2021-03-31-183223_create_workspaces/: up.sql
migrations/2021-04-01-020809_create_applets/: down.sql  up.sql
migrations/2021-04-03-233016_create_containers/: down.sql  up.sql
migrations/2021-04-14-231154_create_login_history/: down.sql  up.sql
migrations/2021-04-22-140310_create_tenant_configuration/: down.sql  up.sql
nginx/: nginx.conf
scripts/: create_db.sh  install-docker-compose.sh  js-dev-setup.sh  rust-setup-dev.sh  wait-for-db.sh
src/: db.rs  fairing.rs  main.rs  router.rs  schema.rs  utils.rs
src/containers/: docker.rs  handler.rs  mod.rs  model.rs  router.rs
src/db/: models.rs
src/tenants/: auth.rs  error.rs  handler.rs  helper.rs  helpers.rs  jwt.rs  mod.rs  model.rs  repository.rs  router.rs  schema.rs  token.rs
src/terminal/: mod.rs
src/tests/: mod.rs  test_containers.rs  test_main.rs  test_tenants.rs  test_terminal.rs  test_workspaces.rs
src/workspaces/: handler.rs  mod.rs  model.rs  router.rs
tests/: main.rs  test_main.rs
views/: .eslintrc.js  README.md  package-lock.json  package.json  webpack.config.js
views/config/: index.js  test.env.js
views/src/: App.vue
views/src/components/: GridManager.vue  Index.vue
views/src/router/: index.js
vue/: README.md  index.html  package-lock.json  package.json
(+2 files in other folders)
