[package]
name = "dasher_control"
version = "0.1.2"
authors = ["Antoine Boucher <antoine.bou13@gmail.com>"]
keywords = ["rocket", "tilling", "vue", "web-server", "dashercontrol", "dashboard"]
license = "MIT"
categories = ["dashboard", "server", "web"]
edition = "2018"


[dependencies]
rocket = { version = "0.4.7", features = ["tls"] }
rocket_contrib = {version="0.4.5", features=["json", "tera_templates", "diesel_postgres_pool"]}
rocket_codegen = "0.4.7"
rocket_cors = "0.4.0"
serde = { version = "1.0.104", features = ["derive"] }
serde_derive = "1.0.99"
serde_json = "1.0.40"
diesel = { version = "1.4.5", features = ["postgres", "r2d2", "chrono"] }
diesel_codegen = { version = "0.16.1", features = ["postgres"] }
chrono = { version = "0.4.10", features = ["serde"] }
r2d2-diesel = "1.0.0"
r2d2 = "0.8.9"
dotenv = "0.15.0"
jsonwebtoken = "5.0.1"
bcrypt = "0.8.0"
csrf = "0.4.0"
shiplift = "0.7"
tokio={ version="1.4.0", features = ["macros", "rt-multi-thread"]}
log = "0.4"
fern = "0.5"
futures = "0.3.13"